# first-mate

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  uwsgi.ini
calendars/: FirstMate demo calendar.ics  ben.ics  non-class-example.ics  sid.ics  simple.ics
first-mate/: data.py  ical_analysis.py  server.py  user.py
first-mate/logic/: data.py  user.py
first-mate/server/: auth.py  util.py
first-mate/static/: root.css
first_mate/: __main__.py  consts.py
first_mate/logic/: __init__.py  class_analysis.py  data.py  event_overlap.py  ical_analysis.py  map.py  schedule_match.py  user.py
first_mate/server/: __init__.py  auth.py  calendar.py  debug.py  mates.py  profile.py  session.py  util.py
first_mate/server/landing/: __init__.py  bg_animation.py  features_section.py  how_it_works_testimonials_section.py  landing_page.py
first_mate/server/static/: animation.css  landing.css  root.css
first_mate/static/: animation.css  auth.css  landing.css  profile.css  root.css
